   FreeBSD.
 - Signal handler was improved. Some uncaught signals killed the server
   (thanks to @SvenLie)
 - Fix the password hashing function. The last character of the password
   is no longer truncated and the hash is correctly converted to the
   hexadecimal representation. User databases need to be re-generated
   using wendzelnntpadm, see `upgrade' instructions in the documentation.

MISC:
 - Applied NetBSD pkgsrc patch for err feature and for lexer/parser
   functions from Michael Baeuerle; thx for that!
   (reference: https://github.com/jgoerzen/libnbcompat)
 - Applied NetBSD pkgsrc patch to handle VERSION macro definition that
   is also introduced by libmash from Michael Baeuerle; thx for that!
 - Updated SBo script to work with v. 2.1.3; fixed bug that made
   /usr/doc/wendzelnntpd-$ver/docs inaccessible (+x permission was
   missing)
 - Shifted manpages to docs/
 - Prevent usernames with non-alphanumeric characters and newsgroups
   with non-alphanumeric/./- letters.
 - Whitespacing cleanup (thanks to @Christian Barthel for providing a
   patch!)
 - 'configure' script enhancements and cleanup (thanks to @Christian
   Barthel for providing a patch!)
 - Tried clang instead of gcc, just for fun. Seems to work if you
   just replace "gcc" with "clang" in Makefile.inc. Note that clang is
   not officially supported.
 - Fixed some typos in CHANGELOG and HISTORY files.
 - Improved the documentation.
 - Installed atomic switches for SIGTERM and SIGHUP. It is now a 
   statefull kill. SIGHUP can be used to signal conditions in future.
   Thanks to @SvenLie for the patch.

2.1.3-stable "Friedrichroda" : 17-Apr-2021:
 As usual, every new release gets named after a nice travel location.
 This time it is Friedrichroda, Germany.
FIXES:
 - Do not exit on SIG_PIPE (broken pipe) *** security fix (DoS) ***.
    This would be exploitable easily by "echo | telnet hostname port"!
    The fix requires support for the send() flag MSG_NOSIGNAL. Seems